hw11-k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: health-app
  labels:
    app: health-app
spec:
  type: ClusterIP
  selector:
    app: health-app
  ports:
  - name: http
    protocol: TCP
    port: 8000
    targetPort: 8000
