hw11-k8s/ingress-otusapp.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: health-app-otusapp
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: arch.homework
    http:
      paths:
      - path: /otusapp/scherbakovaos(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: health-app
            port:
              number: 8000
